# decent-registry

./: .gitignore  AGENTS.md  CONTEXT.md  README.md  pyproject.toml
.scratch/sha256-distributed-hash-table/: map.md  spec.md
.scratch/sha256-distributed-hash-table/issues/: 01-distributed-registry-overview.md  02-provider-record-schema.md  03-rpc-and-wire-protocol.md  04-python-dht-prototype.md  05-package-and-productionize-python-dht-prototype.md  06-node-cli-start-listener-via-bootstrap.md  07-registry-cli-put-get-provider-record.md  08-cli-driven-end-to-end-integration-verification.md
.scratch/sha256-distributed-hash-table/src/: dht.py  routing.py  test_dht.py
docs/: TODO.md  client-keygen-cli-config.md  identity-put-get-examples.md  multi-node-cluster-setup.md  protocol-concepts.md  provider-put-get-examples.md  single-node-server-setup.md
docs/agents/: domain.md  triage-labels.md
src/decent_registry/: cli.py  config.py  crypto_utils.py  durable_store.py  encoding.py  envelope_builder.py  provider_schema.py  record_validator.py  registry_service.py  signed_envelope.py  storage_backend.py  verification.py
src/decent_registry/dht/: __init__.py  libp2p_dht.py  protocol.py  storage.py
tests/: test_acceptance_object_url.py  test_cli_node.py  test_cli_registry.py  test_config.py  test_dht.py  test_durable_store.py  test_encoding_signed_update.py  test_libp2p_kad_dht_trio.py  test_ping_pong.py  test_provider_schema.py  test_record_validator.py  test_storage_backend.py  test_verification.py
